Bug 470067: Thunderbird 3.0b1 changes IMAP TLS port 143 to 993 when upgrading from v2 (when no mail.server.serverN.port entry in prefs.js). r=standard8, sr=neil